Edited import Variable.java. Add try with resources in MessageService. Add GlobalExceptionHandler and AOP. Add new page 500. Add TSD, sonar result(without coverage)